User documentation improved.
Validations for user model.
Tests for user model.
More documentation for authentication endpoints.
